--- a/src/layouts/Blog.astro
+++ b/src/layouts/Blog.astro
@@ -14,7 +14,7 @@ type Props = MarkdownLayoutProps<{
 const { poster, title, subtitle } = Astro.props.frontmatter;
 ---
 
-<Main title="Frau Katarina | Blog">
+<Main title="Bhushan Bobade | Blog">
   <figure class="figure">
     <img
       src={poster}
