--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ const blogs = await Astro.glob<{
 }>("../pages/blogs/*.md");
 ---
 
-<Main title="Frau Katarina">
+<Main title="Bhushan Bobade">
   <div class="profile">
     <img
       src={profilePicture}
