--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     {/* Add a new meta description tag */}
-    <meta name="description" content="Frau Katarina's website" />
+    <meta name="description" content="Bhushan Bobade's website" />
     <title>{title}</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
